--- a/css/admin.css
+++ b/css/admin.css
@@ -33,4 +33,9 @@ color: rgb(255, 255, 255);
 transition: 0.5s;
 
 }
-
+.card {
+    margin-top: 500px;
+}
+.table table-striped table-bordered{
+    margin-left: 50%;
+}
