--- a/css/estilocontacto.css
+++ b/css/estilocontacto.css
@@ -736,6 +736,7 @@ hr{
 	border: 0px solid;
 	height: auto; overflow: hidden;
 	float: right;
+    border-radius: 15px;
 }
 
 input[type="text"], input[type="email"]{
@@ -787,4 +788,17 @@ transition: 0.5s;
 	width: 100%;
 	height: auto; overflow: hidden;
 	padding: 20px;
+}
+.encuesta{
+    margin-right: 40px;
+    padding: 10px  30px;
+    background-color: rgb(146, 20, 20);
+    color: rgb(250, 250, 250);
+    border-radius: 15px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-decoration: none;
+ 
+}
+.encuesta{
+    color: #ffff;
 }
