--- a/css/estilos1.css
+++ b/css/estilos1.css
@@ -16,15 +16,15 @@ body{
 }
 
 header{
-    width: 100%;
-    height: 100vh;
+  width: 100%;
+  height: 70%;
+  align-items: center;
     background-image: url(https://wallpaperaccess.com/full/230056.jpg);
     background-color: aliceblue;
     background-repeat: no-repeat;
     background-position:auto ;
-    background-size: cover;
-    
-    
+    background-size: cover;    
+   
    
 }
 
@@ -52,7 +52,7 @@ nav{
     color: #fff;
     margin-right: 20px;
     cursor:pointer;
-    background:linear-gradient(70deg,black,white);
+    background:linear-gradient(70deg,rgb(9, 9, 9),white);
 }
 
 .nav-menu{
@@ -60,9 +60,9 @@ nav{
     width: 100%;
     height: 0vh;
     top: 100px;
-   background: rgba(0, 0, 0, .95 );
+   background: rgba(0, 0, 0, 0.95);
     text-align: center;
-    transition: all .5s;
+    transition: all .3s;
 
    
 }
@@ -90,7 +90,7 @@ border-radius: 20px;
 } 
 .nav-menu li a.active , .nav-menu li a:hover{
     color: rgb(255, 255, 255);
-    transition: .3s;
+    transition: .2s;
     background-color: rgb(0, 0, 0);
     color: #fff;
     border-radius: 20px;
@@ -176,7 +176,7 @@ color: rgb(0, 0, 0);
 transition: 0.5s;
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 798px){
     .logo{
         margin-left:30px;
         border-radius: 6px;
@@ -184,7 +184,7 @@ transition: 0.5s;
     }
     nav{
         height: 100px;
-        background: linear-gradient(70deg, black, white);
+        background: linear-gradient(70deg, rgb(3, 3, 3), white);
     }
 
     .bar-btn{
