--- a/css/estilos1.css
+++ b/css/estilos1.css
@@ -35,7 +35,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     background:linear-gradient(70deg,black,white);
-   
+    text-decoration: none;
    
 
 }
@@ -63,7 +63,7 @@ nav{
    background: rgba(0, 0, 0, 0.95);
     text-align: center;
     transition: all .3s;
-
+    text-decoration: none;
    
 }
 
@@ -73,7 +73,7 @@ nav{
     margin: 70px 0;
     transition: all .5s;
     font-family: Arial;
-
+    text-decoration: none;
 }
 
 .nav-menu li a{
@@ -86,7 +86,7 @@ padding: 10px  30px;
 background-color: rgb(117, 26, 26);
 color: #fff;
 border-radius: 20px;
-
+text-decoration: none;
 } 
 .nav-menu li a.active , .nav-menu li a:hover{
     color: rgb(255, 255, 255);
@@ -94,17 +94,18 @@ border-radius: 20px;
     background-color: rgb(0, 0, 0);
     color: #fff;
     border-radius: 20px;
+    text-decoration: none;
 }
 
 
 #check:checked ~ .nav-menu{
     height: 100vh;
-
+    text-decoration: none;
 }
 
 #check:checked ~ .nav-menu li {
  display: block;
-
+ text-decoration: none;
 }
 
 .banner-text{
@@ -114,6 +115,7 @@ border-radius: 20px;
   color: rgb(14, 14, 14);
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   align-items: center;
+  text-decoration: none;
 
 }
 .botton{
@@ -134,6 +136,7 @@ border-radius: 20px;
   border-radius: 20px;
   text-align: center;
   align-items: center;
+  text-decoration: none;
 }
 .botton:hover{
   
@@ -141,6 +144,7 @@ transition: .3s;
 background-color: rgb(132, 27, 27);
 color: #fff;
 border-radius: 20px;
+text-decoration: none;
 }
 
 .button1{
@@ -150,14 +154,14 @@ border-radius: 20px;
     color: rgb(250, 250, 250);
     border-radius: 1px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
+    text-decoration: none;
 }
 
 .button1:hover{
 background-color:rgb(0, 0, 0);
 color: rgb(255, 255, 255);
 transition: 0.5s;
-
+text-decoration: none;
 }
 
 .button2{
@@ -167,13 +171,14 @@ transition: 0.5s;
     color: rgb(168, 30, 30);
     border-radius: 1px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  
+    text-decoration: none;
 }
 
 .button2:hover{
     background-color:rgb(199, 20, 20);
 color: rgb(0, 0, 0);
 transition: 0.5s;
+text-decoration: none;
 }
 
 @media screen and (min-width: 798px){
@@ -194,13 +199,13 @@ transition: 0.5s;
     .nav-menu{
         position: relative;
         height: 100px;
-        top: 0%;
+        top: 7%;
         background: none;
         transition: none;
         text-align: center;
-        margin-right: 10px;
+        margin-right: 15px;
         border-radius: 6px;
-        box-shadow: 0px  2px 0px rgba(124, 24, 24, 0.986);
+        box-shadow: 0px  2px 0px rgba(141, 17, 17, 0.986);
     }
 
     .nav-menu li{
@@ -600,4 +605,76 @@ section h2{
     background-color: transparent;
     border: 1px solid black;
   }
- 
+  .contact-info h3,
+  .contact-info ul,
+  .contact-info p {
+      text-align: center;
+      text-decoration: none;
+      display: block;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-direction: column;
+      font-family: Arial, Helvetica, sans-serif;
+       
+  }
+  
+  .contact-info ul{
+  
+  padding: 0%;
+  display: block;
+  text-decoration: none;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
+  
+  }
+  .contact-info ul li{
+      padding: .3em;
+      text-decoration: none;
+      display: block;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-direction: column;
+      font-family: Arial, Helvetica, sans-serif;
+     
+  }
+  
+  
+  
+  .contact-info h3,
+  .contact-info ul,
+  .contact-info p {
+      
+      text-align: left;
+      text-decoration: none;
+      display: block;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-direction: column;
+      font-family: Arial, Helvetica, sans-serif;
+      
+  }
+  .float{
+    position:fixed;
+    width:60px;
+    height:60px;
+    bottom:40px;
+    right:40px;
+    background-color:#25d366;
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    font-size:30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index:100;
+  }
+  .float:hover {
+    text-decoration: none;
+    color: #25d366;
+    background-color:#fff;
+  }
+  
+  .my-float{
+    margin-top:16px;
+  }
