--- a/css/serviciosestilos.css
+++ b/css/serviciosestilos.css
@@ -13,6 +13,7 @@ body{
     font-family: "montserrat",serif;
     background-image: -webkit-linear-gradient(black);
     position: relative;
+    text-decoration: none;
 }
   
    
@@ -24,7 +25,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     background:linear-gradient(70deg,black,white);
-   
+   text-decoration: none;
    
 
 }
@@ -52,6 +53,7 @@ nav{
    background: rgba(0, 0, 0, .95 );
     text-align: center;
     transition: all .5s;
+    text-decoration: none;
 
    
 }
@@ -62,6 +64,7 @@ nav{
     margin: 70px 0;
     transition: all .5s;
     font-family: Arial;
+    text-decoration: none;
 
 }
 
@@ -75,6 +78,7 @@ padding: 10px  30px;
 background-color: rgb(117, 26, 26);
 color: #fff;
 border-radius: 20px;
+text-decoration: none;
 
 } 
 .nav-menu li a.active , .nav-menu li a:hover{
@@ -162,7 +166,7 @@ transition: 0.5s;
     .nav-menu{
         position: relative;
         height: 100px;
-        top: 0%;
+        top: 7%;
         background: none;
         transition: none;
         text-align: center;
